--- a/ProjectASCII.vcxproj
+++ b/ProjectASCII.vcxproj
@@ -147,6 +147,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Buffer.cpp" />
+    <ClCompile Include="Caractere.cpp" />
     <ClCompile Include="Case.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="main.cpp" />
@@ -154,6 +155,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Buffer.h" />
+    <ClInclude Include="Caractere.h" />
     <ClInclude Include="Case.h" />
     <ClInclude Include="Input.h" />
   </ItemGroup>
